--- a/UI/accounts.html
+++ b/UI/accounts.html
@@ -48,7 +48,7 @@
                 <!-- / TAB : ALL / -->
                 <div class="tab-pane fade show active" id="nav-all" role="tabpanel" aria-labelledby="nav-all-tab">
 
-                    <!-- FILTER 
+                    <!-- FILTER -->
 
                     <div class="filters mt-5">
                         <h5>FILTERS</h5>
