--- a/UI/accounts.html
+++ b/UI/accounts.html
@@ -25,6 +25,9 @@
     </header>
 
     <main class="p-5">
+        <aside>
+            <div>MENU</div>
+        </aside>
 
         <section id="nav-mid">
             <nav>
@@ -48,7 +51,7 @@
                 <!-- / TAB : ALL / -->
                 <div class="tab-pane fade show active" id="nav-all" role="tabpanel" aria-labelledby="nav-all-tab">
 
-                    <!-- FILTER
+                    <!-- FILTER -->
 
                     <div class="filters mt-5">
                         <h5>FILTERS</h5>
