--- a/UI/event.html
+++ b/UI/event.html
@@ -160,7 +160,7 @@
 
                         <div class="main-left">
                             <div class="option-box">
-                                <div class="option-header">
+                                <div class="option-header active">
                                     <div class="option-header-box">
                                         <div class="option-title">
                                             <span>FILTER</span>
@@ -368,7 +368,7 @@
                                                                 </select>
                                                             </div>
                                                             <div class="reset-btn">
-                                                                <button class="tocar">재배정</button>
+                                                                <button class="tocar">배정</button>
                                                             </div>
                                                         </div>
 
@@ -754,7 +754,7 @@
                         <div class="filter none">
                             <span>FILTER</span>
                         </div>
-                        
+
                     </div>
                 </main>
             </div>
