--- a/UI/config.html
+++ b/UI/config.html
@@ -173,7 +173,7 @@
                         <div class="main-center">
 
                             <!-- 분배 -->
-                            <div class="config-box share active">
+                            <div class="config-box share none">
 
                                 <!-- 재통화 분배 -->
                                 <div class="config-element">
@@ -613,7 +613,7 @@
                             </div>
 
                             <!-- 사전 주문 처리 -->
-                            <div class="config-box error none">
+                            <div class="config-box error active">
                                 
                                 <!-- 주문 중복 관리 -->
                                 <div class="config-element">
