--- a/UI/login.html
+++ b/UI/login.html
@@ -2,7 +2,7 @@
 <html>
 
         <head>
-                <title>LOGIN</title>
+                <title>ADAND OMS LOGIN</title>
                 <meta charset="utf-8">
             
                 <link href="css/style.css" rel="stylesheet">
