--- a/UI/stats.html
+++ b/UI/stats.html
@@ -242,6 +242,10 @@
                                 </div>
                             </div>
 
+                            <div class="title-box">
+                                <span>INDEX</span>
+                            </div>
+
                             <div class="chart-box">
 
                                 <!-- 진행별 주문 통계 -->
@@ -258,10 +262,10 @@
                                                     label: '# 긍정적 진행 주문 ',
                                                     data: [7, 4, 5, 7, 9, 0, 0, 0, 0],
                                                     backgroundColor: [
-                                                        'rgba(0, 0, 255, 0.2)'
+                                                        'rgba(54, 162, 235, 0.2)'
                                                     ],
                                                     borderColor: [
-                                                        'rgba(0, 0, 255, 1)'
+                                                        'rgba(54, 162, 235, 1)'
                                                     ],
                                                     borderWidth: 1
                                                 },
@@ -289,6 +293,7 @@
                                             }
                                         });
                                     </script>
+                                    <div class="caption">진행별 주문 통계</div>
 
                                 </div>
 
@@ -329,6 +334,7 @@
                                             }
                                         });
                                     </script>
+                                    <div class="caption">기기별 주문 통계</div>
                                 </div>
 
                                 <!-- 요일별 주문 통계 -->
@@ -375,6 +381,7 @@
                                             }
                                         });
                                     </script>
+                                    <div class="caption">요일별 주문 통계</div>
 
                                 </div>
 
@@ -396,12 +403,7 @@
                                                     label: '# 일별 주문 통계',
                                                     data: [7, 4, 5, 7, 9, 10, 9],
                                                     backgroundColor: [
-                                                        'rgba(255, 99, 132, 0.2)',
-                                                        'rgba(54, 162, 235, 0.2)',
-                                                        'rgba(255, 206, 86, 0.2)',
-                                                        'rgba(75, 192, 192, 0.2)',
-                                                        'rgba(153, 102, 255, 0.2)',
-                                                        'rgba(255, 159, 64, 0.2)'
+                                                        'rgba(255, 99, 132, 0)'
                                                     ],
                                                     borderColor: [
                                                         'rgba(255, 99, 132, 1)',
@@ -426,6 +428,7 @@
                                             }
                                         });
                                     </script>
+                                    <div class="caption">일별 주문 통계</div>
 
                                 </div>
 
@@ -470,6 +473,7 @@
                                             }
                                         });
                                     </script>
+                                    <div class="caption">소스별 주문 통계</div>
                                 </div>
 
                                 <!-- 연령별 주문 통계 -->
@@ -516,6 +520,7 @@
                                             }
                                         });
                                     </script>
+                                    <div class="caption">연령별 주문 통계</div>
 
                                 </div>
 
