--- a/UI/stats_index.html
+++ b/UI/stats_index.html
@@ -161,19 +161,37 @@
 
                                 <div class="option-header selectable">
                                     <div class="option-header-box">
-                                        <span>요일별</span>
+                                        <span>진행별</span>
                                     </div>
                                 </div>
 
                                 <div class="option-header selectable">
                                     <div class="option-header-box">
-                                        <span>일별</span>
+                                        <span>기기별</span>
                                     </div>
                                 </div>
 
                                 <div class="option-header selectable">
                                     <div class="option-header-box">
-                                        <span>일별</span>
+                                        <span>기간별</span>
+                                    </div>
+                                </div>
+
+                                <div class="option-header selectable">
+                                    <div class="option-header-box">
+                                        <span>폼별</span>
+                                    </div>
+                                </div>
+
+                                <div class="option-header selectable">
+                                    <div class="option-header-box">
+                                        <span>소스별</span>
+                                    </div>
+                                </div>
+
+                                <div class="option-header selectable">
+                                    <div class="option-header-box">
+                                        <span>연령별</span>
                                     </div>
                                 </div>
 
