--- a/UI/stats/device.html
+++ b/UI/stats/device.html
@@ -13,27 +13,7 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Manjari|Noto+Sans+KR&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
-
-    <!-- DATEPICKER -->
-    <script>
-        $(function () {
-            $.datepicker.setDefaults({
-                dateFormat: 'yy-mm-dd'
-                , showOtherMonths: true
-                , showMonthAfterYear: true
-                , changeYear: true
-                , changeMonth: true
-                , monthNamesShort: ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11', '12']
-                , monthNames: ['1월', '2월', '3월', '4월', '5월', '6월', '7월', '8월', '9월', '10월', '11월', '12월']
-                , dayNamesMin: ['일', '월', '화', '수', '목', '금', '토']
-                , dayNames: ['일요일', '월요일', '화요일', '수요일', '목요일', '금요일', '토요일']
-                , minDate: "-1Y"
-                , maxDate: "today"
-            });
-            $("#datepicker_start").datepicker();
-            $("#datepicker_end").datepicker();
-        });
-    </script>
+    <script src="./js/main.js"></script>
 
 </head>
 
@@ -159,13 +139,13 @@
                                     </div>
                                 </div>
 
-                                <div class="option-header active">
+                                <div class="option-header selectable">
                                     <div class="option-header-box">
                                         <span>진행별</span>
                                     </div>
                                 </div>
 
-                                <div class="option-header selectable">
+                                <div class="option-header selectable active">
                                     <div class="option-header-box">
                                         <span>기기별</span>
                                     </div>
@@ -262,41 +242,33 @@
                             </div>
 
                             <div class="title-box">
-                                <span>진행별 통계</span>
+                                <span>기기별 통계</span>
                             </div>
 
                             <div class="chart-box">
 
                                 <div class="element-box">
-                                    <!-- 진행별 RADAR -->
+                                    <!-- 기기별 pie -->
                                     <div class="chart-element">
 
                                         <canvas id="myChart1" width="50" height="50"></canvas>
+                                        
                                         <script>
                                             var ctx = document.getElementById('myChart1');
                                             var myChart1 = new Chart(ctx, {
-                                                type: 'radar',
+                                                type: 'pie',
                                                 data: {
-                                                    labels: ['대기', '신규', '가망', '결재', '부재', '결번', '본인아님', '거절', '강제폐기'],
+                                                    labels: ['WEB', 'MOBILE', 'ETC'],
                                                     datasets: [{
                                                         label: '# 긍정적 진행 주문 ',
-                                                        data: [7, 4, 5, 7, 9, 0, 0, 0, 0],
+                                                        data: [17, 44, 5],
                                                         backgroundColor: [
-                                                            'rgba(54, 162, 235, 0.2)'
+                                                            'rgba(54, 162, 235, 0.2)',
+                                                            'rgba(255, 10, 10, 0.2)'
                                                         ],
                                                         borderColor: [
-                                                            'rgba(54, 162, 235, 1)'
-                                                        ],
-                                                        borderWidth: 1
-                                                    },
-                                                    {
-                                                        label: '# 부정적 진행 주문',
-                                                        data: [0, 0, 0, 0, 0, 10, 9, 22, 15],
-                                                        backgroundColor: [
-                                                            'rgba(255, 0, 0, 0.2)'
-                                                        ],
-                                                        borderColor: [
-                                                            'rgba(255, 0, 0, 1)'
+                                                            'rgba(54, 162, 235, 1)',
+                                                            'rgba(255, 10, 10, 1)'
                                                         ],
                                                         borderWidth: 1
                                                     }],
@@ -316,7 +288,7 @@
 
                                     </div>
 
-                                    <!-- 진행별 BAR -->
+                                    <!-- 기기별 line -->
                                     <div class="chart-element">
 
                                         <canvas id="myChart7" width="50" height="50"></canvas>
