--- a/UI/stats/dotw.html
+++ b/UI/stats/dotw.html
@@ -244,7 +244,7 @@
                             </div>
 
                             <div class="title-box">
-                                <span>진행 현황</span>
+                                <span>진행별 통계</span>
                             </div>
 
                             <div class="chart-box">
@@ -268,6 +268,7 @@
                                         <thead>
                                             <tr>
                                                 <th scope="row">DATE</th>
+                                                <th scope="row">대기</th>
                                                 <th scope="row">신규</th>
                                                 <th scope="row">가망</th>
                                                 <th scope="row">결재</th>
@@ -275,26 +276,26 @@
                                                 <th scope="row">결번</th>
                                                 <th scope="row">본인아님</th>
                                                 <th scope="row">거절</th>
-                                                <th scope="row">대기</th>
                                                 <th scope="row">강제폐기</th>
                                             </tr>
                                         </thead>
 
                                         <tbody>
-                                            <tr class="channel">
-                                                <td>LOTTORICH1</td>
-                                                <td></td>
-                                                <td></td>
-                                                <td></td>
-                                                <td></td>
-                                                <td></td>
-                                                <td></td>
-                                                <td></td>
+                                            <tr>
+                                                <td>2019-09-16</td>
                                                 <td>4</td>
+                                                <td>11</td>
+                                                <td>13</td>
+                                                <td>15</td>
+                                                <td>0</td>
+                                                <td>7</td>
+                                                <td>55</td>
+                                                <td>7</td>
                                                 <td>6</td>
                                             </tr>
                                             <tr>
-                                                <td>손흥민</td>
+                                                <td>2019-09-17</td>
+                                                <td>4</td>
                                                 <td>11</td>
                                                 <td>13</td>
                                                 <td>15</td>
@@ -302,11 +303,11 @@
                                                 <td>7</td>
                                                 <td>55</td>
                                                 <td>7</td>
-                                                <td></td>
-                                                <td></td>
+                                                <td>6</td>
                                             </tr>
                                             <tr>
-                                                <td>박지성</td>
+                                                <td>2019-09-16</td>
+                                                <td>4</td>
                                                 <td>11</td>
                                                 <td>13</td>
                                                 <td>15</td>
@@ -314,13 +315,182 @@
                                                 <td>7</td>
                                                 <td>55</td>
                                                 <td>7</td>
-                                                <td></td>
-                                                <td></td>
+                                                <td>6</td>
                                             </tr>
+                                            <tr>
+                                                <td>2019-09-16</td>
+                                                <td>4</td>
+                                                <td>11</td>
+                                                <td>13</td>
+                                                <td>15</td>
+                                                <td>0</td>
+                                                <td>7</td>
+                                                <td>55</td>
+                                                <td>7</td>
+                                                <td>6</td>
+                                            </tr>
+                                            <tr>
+                                                <td>2019-09-16</td>
+                                                <td>4</td>
+                                                <td>11</td>
+                                                <td>13</td>
+                                                <td>15</td>
+                                                <td>0</td>
+                                                <td>7</td>
+                                                <td>55</td>
+                                                <td>7</td>
+                                                <td>6</td>
+                                            </tr>
+                                            <tr>
+                                                <td>2019-09-16</td>
+                                                <td>4</td>
+                                                <td>11</td>
+                                                <td>13</td>
+                                                <td>15</td>
+                                                <td>0</td>
+                                                <td>7</td>
+                                                <td>55</td>
+                                                <td>7</td>
+                                                <td>6</td>
+                                            </tr>
+                                            <tr>
+                                                <td>2019-09-16</td>
+                                                <td>4</td>
+                                                <td>11</td>
+                                                <td>13</td>
+                                                <td>15</td>
+                                                <td>0</td>
+                                                <td>7</td>
+                                                <td>55</td>
+                                                <td>7</td>
+                                                <td>6</td>
+                                            </tr>
+                                            <tr>
+                                                <td>2019-09-16</td>
+                                                <td>4</td>
+                                                <td>11</td>
+                                                <td>13</td>
+                                                <td>15</td>
+                                                <td>0</td>
+                                                <td>7</td>
+                                                <td>55</td>
+                                                <td>7</td>
+                                                <td>6</td>
+                                            </tr>
+                                            <tr>
+                                                <td>2019-09-16</td>
+                                                <td>4</td>
+                                                <td>11</td>
+                                                <td>13</td>
+                                                <td>15</td>
+                                                <td>0</td>
+                                                <td>7</td>
+                                                <td>55</td>
+                                                <td>7</td>
+                                                <td>6</td>
+                                            </tr>
+                                            <tr>
+                                                <td>2019-09-16</td>
+                                                <td>4</td>
+                                                <td>11</td>
+                                                <td>13</td>
+                                                <td>15</td>
+                                                <td>0</td>
+                                                <td>7</td>
+                                                <td>55</td>
+                                                <td>7</td>
+                                                <td>6</td>
+                                            </tr>
+                                            <tr>
+                                                <td>2019-09-16</td>
+                                                <td>4</td>
+                                                <td>11</td>
+                                                <td>13</td>
+                                                <td>15</td>
+                                                <td>0</td>
+                                                <td>7</td>
+                                                <td>55</td>
+                                                <td>7</td>
+                                                <td>6</td>
+                                            </tr>
+                                            <tr>
+                                                <td>2019-09-16</td>
+                                                <td>4</td>
+                                                <td>11</td>
+                                                <td>13</td>
+                                                <td>15</td>
+                                                <td>0</td>
+                                                <td>7</td>
+                                                <td>55</td>
+                                                <td>7</td>
+                                                <td>6</td>
+                                            </tr>
+                                            <tr>
+                                                <td>2019-09-16</td>
+                                                <td>4</td>
+                                                <td>11</td>
+                                                <td>13</td>
+                                                <td>15</td>
+                                                <td>0</td>
+                                                <td>7</td>
+                                                <td>55</td>
+                                                <td>7</td>
+                                                <td>6</td>
+                                            </tr>
+                                            <tr>
+                                                <td>2019-09-16</td>
+                                                <td>4</td>
+                                                <td>11</td>
+                                                <td>13</td>
+                                                <td>15</td>
+                                                <td>0</td>
+                                                <td>7</td>
+                                                <td>55</td>
+                                                <td>7</td>
+                                                <td>6</td>
+                                            </tr>
+                                            <tr>
+                                                <td>2019-09-16</td>
+                                                <td>4</td>
+                                                <td>11</td>
+                                                <td>13</td>
+                                                <td>15</td>
+                                                <td>0</td>
+                                                <td>7</td>
+                                                <td>55</td>
+                                                <td>7</td>
+                                                <td>6</td>
+                                            </tr>
+                                            <tr>
+                                                <td>2019-09-16</td>
+                                                <td>4</td>
+                                                <td>11</td>
+                                                <td>13</td>
+                                                <td>15</td>
+                                                <td>0</td>
+                                                <td>7</td>
+                                                <td>55</td>
+                                                <td>7</td>
+                                                <td>6</td>
+                                            </tr>
+                                            <tr>
+                                                <td>2019-09-16</td>
+                                                <td>4</td>
+                                                <td>11</td>
+                                                <td>13</td>
+                                                <td>15</td>
+                                                <td>0</td>
+                                                <td>7</td>
+                                                <td>55</td>
+                                                <td>7</td>
+                                                <td>6</td>
+                                            </tr>
+
                                         </tbody>
                                         <tfoot>
                                             <tr>
                                                 <td>TOTAL</td>
+                                                <td>4</td>
                                                 <td>11</td>
                                                 <td>13</td>
                                                 <td>15</td>
@@ -328,7 +498,6 @@
                                                 <td>7</td>
                                                 <td>55</td>
                                                 <td>7</td>
-                                                <td>4</td>
                                                 <td>6</td>
                                             </tr>
                                         </tfoot>
